Wed Nov 18 09:59:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/Connector_T.h:
        * connectors/dds4ccm/impl/ndds/ndds_impl.mpc:
        * connectors/dds4ccm/impl/ndds/TopicListener.cpp:
        * connectors/dds4ccm/impl/ndds/TopicListener.h:
        * connectors/dds4ccm/impl/ndds/TopicListener_T.h:
        * connectors/dds4ccm/impl/ndds/TopicListener_T.cpp:
          Added TopicListener to implement the on_inconsistent_topic
          on the connectorstatuslistener

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Extended this test

Wed Nov 18 09:24:04 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.h:
        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Writer_T.h:
        * connectors/dds4ccm/impl/ndds/Writer_T.cpp:
          Fixed compiler issues related to TAO IDL compiler
          fix (see Tue Nov 17 20:47:27 UTC 2009  Jeff Parsons in
          TAO changelog for details).

Wed Nov 18 09:20:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
          Const change

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          Print DDS return values as string

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          Cleanup all code and only pass properties that start with
          edu.vanderbilt.dre. to the component server

        * DAnCE/NodeManager/Node_Manager_Module.cpp:
          Removed old stuff

Tue Nov 17 19:40:10 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/descriptors/Plan.cdp:
          Changed to meet the latest version of the DDS implementation.