@@ -34,6 +34,6 @@ project(CIAO_DDS4CCM_NDDS_Impl) : dds4ccm_skel, taolib, ciao_output, nddslib, cc
     QueryCondition.cpp
     Utils.cpp
     DataListenerControl.cpp
-    Topic.cpp
+    TopicListener.cpp
   }
 }
