@@ -1,3 +1,14 @@
+Wed Nov 18 10:28:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/Connector_T.h:
+          Docu update
+
+        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
+          Set a topic listener to DDS
+
+        * connectors/dds4ccm/impl/ndds/ndds_impl.mpc:
+          Add TopicListener.cpp
+
 Wed Nov 18 09:59:10 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
